Fixes for JDK 12